# prog4-game-engine

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: BaseComponent.h  Deletable.h  Deleter.h  FPS.h  Font.h  GameObject.h  GameObjectView.h  GameTime.h  InputManager.h  Renderer.h  ResourceManager.h  RotatingComponent.h  Scene.h  SceneManager.h  Singleton.h  TextComponent.h  Texture2D.h  TextureComponent.h  Transform.h  type_utility.hpp
engine/include/bindings/: BindingTypes.h  Command.h  DeviceContext.h  InputAction.h  InputActionBuilder.h  InputBuffer.h  InputMappingContext.h  binding_controls.h  binding_device.h  binding_structs.h  binding_traits.h  binding_types.h
engine/include/components/: BaseComponent.h  BaseUIComponent.h  Component.h  InputDisplayUIComponent.h  TextComponent.h
engine/include/controllers/: BaseController.h  PlayerController.h
engine/include/core/: Minigin.h  imgui_core.h  type_utility.hpp
engine/include/ecs/: Deleter.h  GameObjectView.h  Scene.h
engine/include/ecs/components/: FPS.h  UIComponent.h
engine/include/event/: Observer.h  Subject.h
engine/include/framework/: Deletable.h  Deleter.h  Font.h  GameObject.h  GameObjectView.h  Minigin.h  Scene.h  Texture2D.h  Transform.h  UID.h  meta.h  type_utility.hpp
engine/include/framework/components/: Component.h  FPS.h  (+2 more)
engine/include/scene_graph/: Deleter.h  GameObject.h  Scene.h
engine/include/singletons/: GameTime.h  InputSystem.h  Renderer.h  ResourceManager.h  ScenePool.h  ServiceLocator.h  Singleton.h  UIController.h
engine/src/: FPS.cpp  Font.cpp  GameObject.cpp  GameObjectView.cpp  GameTime.cpp  InputManager.cpp  Minigin.cpp  Renderer.cpp  ResourceManager.cpp  RotatingComponent.cpp  Scene.cpp  SceneManager.cpp  TextComponent.cpp  Texture2D.cpp  TextureComponent.cpp  Transform.cpp
engine/src/bindings/: DeviceContext.cpp  InputBuffer.cpp  InputMappingContext.cpp  binding_controls.cpp  binding_device.cpp
engine/src/components/: FPS.cpp  InputDisplayUIComponent.cpp  TextComponent.cpp  TextureComponent.cpp
engine/src/controllers/: PlayerController.cpp
engine/src/core/: Minigin.cpp  imgui_core_dwn.cpp  imgui_core_win.cpp
engine/src/ecs/: GameObject.cpp  GameObjectView.cpp
engine/src/event/: Subject.cpp
engine/src/framework/: Font.cpp  GameObject.cpp  GameObjectView.cpp  Minigin.cpp  Scene.cpp  Texture2D.cpp  Transform.cpp
engine/src/scene_graph/: GameObject.cpp  Scene.cpp
engine/src/services/: SdlSoundSystem.cpp
engine/src/singleton/: GameInstance.cpp  GameTime.cpp  InputSystem.cpp  Renderer.cpp  ScenePool.cpp  UIController.cpp
engine/src/singletons/: GameTime.cpp  InputSystem.cpp  Renderer.cpp  ResourceManager.cpp  ScenePool.cpp  ServiceLocator.cpp  UIController.cpp
game/: CMakeLists.txt
game/include/bindings/: AttackCommand.h  IABMove.h  InputUtils.h  MoveCommand.h  ScoreCommand.h  TestController.cpp  TestController.h
game/include/component/: BubStateComponent.h  FPS.h
game/include/components/: AttackComponent.h  DemoUIComponent.h  FPS.h  HealthComponent.h  MoveComponent.h  ObserverTestUIComponent.h  PlayerControllerComponent.h  RotatingComponent.h  ScoreComponent.h
game/include/controller/: CharacterController.h  DebugController.h  TestController.h
game/include/controllers/: TestController.h
game/include/entities/: character_controls_state_machine.cpp  character_controls_state_machine.h
game/include/registration/: input.h
game/include/state/: SpriteState.h
game/include/ui_component/: AudioTestUIComponent.h
game/include/ui_components/: AudioTestUIComponent.h  DemoUIComponent.h  ObserverTestUIComponent.h
game/project/: main.cpp
game/project/command/: AttackCommand.cpp  AttackCommand.h  BubbleAttackCommand.cpp  BubbleAttackCommand.h  EmptyAttackCommand.cpp  EmptyAttackCommand.h  JumpCommand.cpp  JumpCommand.h  MoveCommand.cpp  MoveCommand.h  RockAttackCommand.cpp  RockAttackCommand.h
game/project/component/: BubbleCaptureComponent.cpp  BubbleCaptureComponent.h  BubbleComponent.cpp  BubbleComponent.h  CharacterComponent.cpp  CharacterComponent.h  CollisionsComponent.cpp  CollisionsComponent.h  EnemyAiComponent.cpp  EnemyAiComponent.h  FPS.cpp  FruitComponent.cpp  FruitComponent.h  GameOverComponent.cpp  GameOverComponent.h  GameOverDelegateComponent.cpp  GameOverDelegateComponent.h  HighScoresDisplayComponent.cpp  HighScoresDisplayComponent.h  JoinMenuComponent.cpp  JoinMenuComponent.h  LevelLoaderComponent.cpp  LevelLoaderComponent.h  MaitaComponent.cpp  MaitaComponent.h  RockComponent.cpp  RockComponent.h  RotatingComponent.cpp  RotatingComponent.h  ScoreComponent.cpp  ScoreComponent.h  ScoreDelegateComponent.cpp  ScoreDelegateComponent.h  StatsDisplayComponent.cpp  StatsDisplayComponent.h  ZenChanComponent.cpp  ZenChanComponent.h
game/project/controller/: CharacterController.cpp  CharacterController.h  DebugController.cpp  DebugController.h  JoinMenuController.cpp  JoinMenuController.h
game/project/helpers/: CsvReader.cpp  CsvReader.h
game/project/registration/: audio.cpp  audio.h  input.cpp  input.h  object_initializers.cpp  object_initializers.h  object_stats.cpp  object_stats.h  tags.h
game/project/ui_component/: DemoUIComponent.h  ObserverTestUIComponent.h
game/resources/: highscores.csv
game/resources/maps/: level1.csv  level2.csv  level3.csv
game/src/: main.cpp
game/src/bindings/: InputUtils.cpp
game/src/component/: BubStateComponent.cpp  FPS.cpp  RotatingComponent.cpp
game/src/components/: AttackComponent.cpp  DemoUIComponent.cpp  FPS.cpp  HealthComponent.cpp  MoveComponent.cpp  ObserverTestUIComponent.cpp  PlayerControllerComponent.cpp  RotatingComponent.cpp  ScoreComponent.cpp
game/src/controller/: CharacterController.cpp  TestController.cpp
game/src/controllers/: TestController.cpp
game/src/registration/: audio.cpp  input.cpp
game/src/state/: SpriteState.cpp
game/src/ui_component/: AudioTestUIComponent.cpp  DemoUIComponent.cpp  ObserverTestUIComponent.cpp
game/src/ui_components/: AudioTestUIComponent.cpp  DemoUIComponent.cpp  ObserverTestUIComponent.cpp
(+152 files in other folders)
